# rust-zero2prod

./: .dockerignore  Cargo.toml  Dockerfile
.cargo/: config.toml
.config/: production.yaml
.github/workflows/: general.yml
migrations/: 20230105141505_create_subscriptions_table.sql  20230114104859_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
